apollo-router/src/configuration/snapshots/uhg_custom_appollo_roouter__configuration__tests__upgrade_old_configuration@apollo_telemetry_experimental.router.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
assertion_line: 634
expression: new_config
---
---
telemetry:
  apollo:
    signature_normalization_algorithm: enhanced
    metrics_reference_mode: extended
