apollo-router/src/configuration/snapshots/uhg_custom_appollo_roouter__configuration__tests__upgrade_old_configuration@batching.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
assertion_line: 634
expression: new_config
---
---
batching:
  enabled: true
  mode: batch_http_link
