apollo-router/src/configuration/snapshots/uhg_custom_appollo_roouter__configuration__tests__upgrade_old_configuration@entity_cache_preview.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
assertion_line: 634
expression: new_config
---
---
preview_entity_cache:
  enabled: true
  invalidation:
    listen: "127.0.0.1:4000"
    path: /invalidation
  subgraph:
    subgraphs:
      accounts:
        enabled: false
      products:
        ttl: 120s
    all:
      redis:
        urls:
          - "redis://localhost:6379"
        timeout: 5ms
        ttl: 60s
