apollo-router/src/configuration/snapshots/uhg_custom_appollo_roouter__configuration__tests__upgrade_old_configuration@http_max_request_bytes.router.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
assertion_line: 634
expression: new_config
---
---
limits:
  http_max_request_bytes: 4000000
