apollo-router/src/configuration/snapshots/uhg_custom_appollo_roouter__configuration__tests__upgrade_old_configuration@jaeger_scheduled_delay.router.yaml.snap
---
source: apollo-router/src/configuration/tests.rs
assertion_line: 634
expression: new_config
---
---
telemetry:
  exporters:
    tracing:
      jaeger:
        agent:
          endpoint: default
        batch_processor:
          scheduled_delay: 100ms
        enabled: true
